# gms

./: CMakeLists.txt  README.md  gms-dist.mk  gms.h  gms.mk  gms.tex  gms_configure.sh_inc  gms_make.mk  gmsbgi.c  gmsdrv.h  gmsgl.c  gmshpgl.c  gmsker.c  gmsmsc.c  gmsps.c  gmsregis.c  gmsstub.c  gmssun.c  gmstek.c  gmsx11.c  simplex.gmf  tgmsc.c  tgmsf.f  triplex.gmf
